add jsvalidator & newsletter section
Added the following
jsvalidator
newsletter section under About Us
validation for email input box
changed the footer section to include all the links

--- a/nkkcorlate/currentevents.html
+++ b/nkkcorlate/currentevents.html
@@ -395,9 +395,10 @@
                 <div class="col-sm-6">
                     <ul class="pull-right">
                         <li><a href="nkk_index.html">Home</a></li>
-                        <li><a href="nkk_about-us.html">About Us</a></li>
-                        <li><a href="currentevents.html">Events</a></li>
                         <li><a href="nkk_membership.html">Membership</a></li>
+                        <li><a href="currentevents.html">Events</a></li>
+                        <li><a href="nkk_about-us.html">About Us</a></li>
+                        <li><a href="nkk_committee.html">Committee</a></li>
                         <li><a href="nkk_contact_us.html">Contact Us</a></li>
                     </ul>
                 </div>
