removed unwanted pages and updated links

--- a/nkkcorlate/nkk_membership.html
+++ b/nkkcorlate/nkk_membership.html
@@ -119,7 +119,7 @@
 
 
                 <div class="col-sm-6 wow fadeInDown">
-                    <h2>Donation and Membership Dues online</h2>
+                    <h2>Donation and Membership dues nline</h2>
                     <p class="lead">Please feel free to use the donate button to pay your membership dues and also we appreciate your generous donation.</p>
                         
                         <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -175,13 +175,14 @@
                     <div class="skill">
                         <h2>Resources and Useful Links</h2>
 
-                        <a href="www.akkaonline.org">AKKA (Association of Kannada Kootas of America)</a><br>
-                        <a href="www.navika.org">NAVIKA (North America Vishwa Kannada Association)</a><br>
-                        <a href="www.kannadakoota.com">LIST of Kannada Kootas of America</a><br>
-                        <a href="www.iantn.org">IAN (Indian Association of Nashville)</a><br>
-                        <a href="ourfiam.wordpress.org">FIAM (Friends of India Association of Murfreesboro)</a><br>
+                        <a href="http://www.akkaonline.org">AKKA (Association of Kannada Kootas of America)</a><br>
+                        <a href="http://www.navika.org">NAVIKA (North America Vishwa Kannada Association)</a><br>
+                        <a href="http://www.kannadakoota.com">LIST of Kannada Kootas of America</a><br>
+                        <a href="http://www.iantn.org">IAN (Indian Association of Nashville)</a><br>
+                        <a href="http://ourfiam.wordpress.org">FIAM (Friends of India Association of
+                            Murfreesboro)</a><br>
                         <a href="http://www.karunadu.gov.in">Official Website of Government of Karnataka</a><br>
-                        <a href="www.kamat.com">Kamath's Potpourri</a><br>
+                        <a href="http://www.kamat.com">Kamath's Potpourri</a><br>
 
                         
                     </div>
@@ -340,7 +341,7 @@
                         <li><a href="currentevents.html">Events</a></li>
                         <li><a href="nkk_about-us.html">About Us</a></li>
                         <li><a href="nkk_committee.html">Committee</a></li>
-                        <li><a href="nkk_contact_us.html">Contact Us</a></li>
+                        <li><a href="nkk_contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
