--- a/nkkcorlate/about-us.html
+++ b/nkkcorlate/about-us.html
@@ -73,14 +73,14 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
+                                <!--  <li><a href="pricing.html">Pricing</a></li>-->
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li> 
