--- a/nkkcorlate/blog-item.html
+++ b/nkkcorlate/blog-item.html
@@ -73,14 +73,14 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                         <li class="dropdown active">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li class="active"><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
+                                <!--<li><a href="pricing.html">Pricing</a></li>-->
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li> 
@@ -231,21 +231,21 @@
     								<img src="images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
                                     <div class="entry-meta small muted">
-                                        <span>By <a href="#">Alex</a></span <span>On <a href="#">Creative</a></span>
+                                        <span>By <a href="#">Alex</a></span> <span>On <a href="#">Creative</a></span>
                                     </div>
     							</div>
     							<div class="single_comments">
     								<img src="images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
     								<div class="entry-meta small muted">
-                                        <span>By <a href="#">Alex</a></span <span>On <a href="#">Creative</a></span>
+                                        <span>By <a href="#">Alex</a></span> <span>On <a href="#">Creative</a></span>
                                     </div>
     							</div>
     							<div class="single_comments">
     								<img src="images/blog/avatar3.png" alt=""  />
     								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do </p>
     								<div class="entry-meta small muted">
-                                        <span>By <a href="#">Alex</a></span <span>On <a href="#">Creative</a></span>
+                                        <span>By <a href="#">Alex</a></span> <span>On <a href="#">Creative</a></span>
                                     </div>
     							</div>
     							
@@ -274,9 +274,12 @@
                             <div class="col-sm-12">
                                 <ul class="blog_archieve">
                                     <li><a href="#"><i class="fa fa-angle-double-right"></i> December 2013 <span class="pull-right">(97)</span></a></li>
-                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> November 2013 <span class="pull-right">(32)</a></li>
-                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> October 2013 <span class="pull-right">(19)</a></li>
-                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> September 2013 <span class="pull-right">(08)</a></li>
+                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> November 2013 <span
+                                            class="pull-right">(32)</span></a></li>
+                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> October 2013 <span
+                                            class="pull-right">(19)</span></a></li>
+                                    <li><a href="#"><i class="fa fa-angle-double-right"></i> September 2013 <span
+                                            class="pull-right">(08)</span></a></li>
                                 </ul>
                             </div>
                         </div>                     
