--- a/nkkcorlate/events.html
+++ b/nkkcorlate/events.html
@@ -63,7 +63,8 @@
                     </button>
                     
                 </div>
-                <a class="navbar-brand" href="index.html"><img src="images/nkkimages/NKK_Full_Logo.png" height="80" width="350" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/nkkimages/NKK_Full_logo.png" height="80"
+                                                               width="350" alt="logo"></a>
                 <br>
                 
                 <div class="collapse navbar-collapse navbar-right">
@@ -78,7 +79,7 @@
                                 <li><a href="currentevents.html">Current</a></li>
                                 <li><a href="pastevents.html">Past</a></li>
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li> 
