--- a/nkkcorlate/index.html
+++ b/nkkcorlate/index.html
@@ -66,7 +66,8 @@
                     </button>
 
                 </div>
-                <a class="navbar-brand" href="index.html"><img src="images/nkkimages/NKK_Full_Logo.png" height="80" width="350" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/nkkimages/NKK_Full_logo.png" height="80"
+                                                               width="350" alt="logo"></a>
                 <br>
 				
                 <div class="collapse navbar-collapse navbar-right">
@@ -74,14 +75,14 @@
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="about-us.html">About Us</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="blog-item.html">Blog Single</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
+                                <!--<li><a href="pricing.html">Pricing</a></li>-->
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li> 
