--- a/nkkcorlate/pastevents.html
+++ b/nkkcorlate/pastevents.html
@@ -78,7 +78,7 @@
                                 <li><a href="currentevents.html">Current</a></li>
                                 <li class="active"><a href="pastevents.html">Past</a></li>
                                 <li><a href="404.html">404</a></li>
-                                <li><a href="shortcodes.html">Shortcodes</a></li>
+                                <!--<li><a href="shortcodes.html">Shortcodes</a></li>-->
                             </ul>
                         </li>
                         <li><a href="blog.html">Blog</a></li> 
