updated links, footer and header

--- a/nkkcorlate/index.html
+++ b/nkkcorlate/index.html
@@ -32,23 +32,20 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +0123 456 70 90</p></div>
+                        <div class="top-number"><p><i class="fa fa-phone-square"></i> +1 615 319 2404</p></div>
                     </div>
                     <div class="col-sm-6 col-xs-8">
                        <div class="social">
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
                             </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                           </div>
+                           <!--       <div class="search">
+                                      <form role="form">
+                                          <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                                          <i class="fa fa-search"></i>
+                                      </form>
+                                 </div>-->
                        </div>
                     </div>
                 </div>
@@ -763,14 +760,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2013 <a target="_blank" href="http://NashvilleKannadaKoota.org/"
+                                   title="Nashville Kannada Koota">Nashville Kannada Koota</a>. All Rights Reserved.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="nkk_index.html">Home</a></li>
+                        <li><a href="nkk_membership.html">Membership</a></li>
+                        <li><a href="currentevents.html">Events</a></li>
+                        <li><a href="nkk_about_us.html">About Us</a></li>
+                        <li><a href="nkk_committee.html">Committee</a></li>
+                        <li><a href="nkk_contact_us.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
