--- a/nkkcorlate/pastevents.html
+++ b/nkkcorlate/pastevents.html
@@ -36,16 +36,18 @@
                             <ul class="social-share">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
-                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                <!--
+                                                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                                                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                                                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                -->
                             </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                           </div>
+                           <!--                         <div class="search">
+                                                        <form role="form">
+                                                            <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                                                            <i class="fa fa-search"></i>
+                                                        </form>
+                                                   </div>-->
                        </div>
                     </div>
                 </div>
@@ -63,7 +65,8 @@
                     </button>
                     
                 </div>
-                <a class="navbar-brand" href="index.html"><img src="images/nkkimages/NKK_Full_Logo.png" height="80" width="400" alt="logo"></a>
+                <a class="navbar-brand" href="nkk_index.html"><img src="images/nkkimages/NKK_Full_Logo2.png"
+                                                                   class="img-responsive" alt="logo"></a>
                 <br>
                 
                 <div class="collapse navbar-collapse navbar-right">
@@ -284,14 +287,17 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
+                    &copy; 2015 <a target="_blank" href="http://www.NashvilleKannadaKoota.org/"
+                                   title="Nashville Kannada Koota">NashvilleKannadaKoota</a>. All Rights Reserved.
                 </div>
                 <div class="col-sm-6">
                     <ul class="pull-right">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Faq</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="nkk_index.html">Home</a></li>
+                        <li><a href="nkk_membership.html">Membership</a></li>
+                        <li><a href="currentevents.html">Events</a></li>
+                        <li><a href="nkk_about_us.html">About Us</a></li>
+                        <li><a href="nkk_committee.html">Committee</a></li>
+                        <li><a href="nkk_contact_us.html">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
